--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <section>
             <h2 class="text-3xl text-center sm:text-left" data-translate-key="about_band_heading">ABOUT THE BAND</h2>
             <p class="mt-4 text-lg leading-relaxed text-F5EFE6" data-translate-key="about_band_paragraph">
-                Jimmy Fitzsimmons is a Serbian garage rock band hailing from Novi Sad, born in 2024 out of a quest for authentic artistic expression. They blend chaos with killer grooves, broken rhythms, saturated guitars, and spring reverbs, creating a sound that boldly mixes funk, hip-hop, and rock. Their music is wild, loud, and unapologetically fun, designed to make you groove, laugh, and maybe even question your life choices. Welcome to the madness.
+                Jimmy Fitzsimmons is a Serbian garage rock band hailing from Novi Sad, formed in 2024. They blend chaos with killer grooves, broken rhythms, saturated guitars, and spring reverbs, creating a sound that boldly mixes funk, hip-hop, and rock. Their music is wild, loud, and unapologetically fun, designed to make you groove, laugh, and maybe even question your life choices.
             </p>
         </section>
 
@@ -211,11 +211,11 @@
                     <p class="quote-source" data-translate-key="source_balkanrock">— Balkanrock</p>
                 </div>
                 <div class="quote-box">
-                    <p data-translate-key="quote_poprock">"Jimmy Fitzsimmons were founded in 2024 with a clear mission – to create music that moves, entertains, but also provokes. Their expression is marked by authenticity, a distance from commercial formulas, and an 'all or nothing' attitude."</p>
+                    <p data-translate-key="quote_poprock">"Their expression is marked by authenticity, a distance from commercial formulas, and an 'all or nothing' attitude."</p>
                     <p class="quote-source" data-translate-key="source_poprock">— Poprock</p>
                 </div>
                 <div class="quote-box">
-                    <p data-translate-key="quote_ravnododna">"‘Too Much, Too Soon’ album which, to be clear, also boasts strong and skillfully crafted highlights in tracks like ‘Fake Tits,’ ‘Bronco Boy,’ and ‘This Ain’t Fvcking Paris.’ This strongly supports the idea that Jimmy Fitzsimmons is not a hastily thrown-together bunch of amateurs, but rather a group of seasoned musicians who needed a kind of outlet for playing around with ideas and a solid groove — a similar approach to the one Jack White took on his No Name album last year.”</p>
+                    <p data-translate-key="quote_ravnododna">"Jimmy Fitzsimmons is not a hastily thrown-together bunch of amateurs, but rather a group of seasoned musicians who needed a kind of outlet for playing around with ideas and a solid groove — a similar approach to the one Jack White took on his No Name album last year”</p>
                     <p class="quote-source" data-translate-key="source_ravnododna">— Ravno do dna</p>
                 </div>
             </div>
@@ -274,16 +274,16 @@
         const translations = {
             "en": {
                 "about_band_heading": "ABOUT THE BAND",
-                "about_band_paragraph": "Jimmy Fitzsimmons is a Serbian garage rock band hailing from Novi Sad, born in 2024 out of a quest for authentic artistic expression. They blend chaos with killer grooves, broken rhythms, saturated guitars, and spring reverbs, creating a sound that boldly mixes funk, hip-hop, and rock. Their music is wild, loud, and unapologetically fun, designed to make you groove, laugh, and maybe even question your life choices. Welcome to the madness.",
+                "about_band_paragraph": "Jimmy Fitzsimmons is a Serbian garage rock band hailing from Novi Sad, formed in 2024. They blend chaos with killer grooves, broken rhythms, saturated guitars, and spring reverbs, creating a sound that boldly mixes funk, hip-hop, and rock. Their music is wild, loud, and unapologetically fun, designed to make you groove, laugh, and maybe even question your life choices.",
                 "latest_release_heading": "LATEST RELEASE: \"TOO MUCH TOO SOON\" (2024)",
                 "latest_release_paragraph": "Their debut album, \"Too Much Too Soon,\" is exactly what it sounds like: a glorious mess of raw energy and questionable decision-making. These guys practically trip over their own riffs, the arrangements are delightfully \"loose,\" and yet, somehow, they've stumbled into something incredible. It's fun, it's short, it's stupid (in the best way possible), and it's packed with unforgettable grooves, killer guitar solos, and stories you won't forget. Featuring standout tracks like \"Fake Tits,\" \"Bronco Boy,\" and \"This Ain't Fvcking Paris,\" the album showcases seasoned musicianship beneath its playful exterior. Welcome to the Jimmy Fitz Function!",
                 "watch_listen_heading": "WATCH & LISTEN",
                 "on_the_press_heading": "ON THE PRESS",
                 "quote_balkanrock": "\"Jimmy Fitzsimmons is an absolute breath of fresh air on the music scene, blending funk, hip-hop, and rock into a sound that is wild, loud, and fun.\"",
                 "source_balkanrock": "— Balkanrock",
-                "quote_poprock": "\"Jimmy Fitzsimmons were founded in 2024 with a clear mission – to create music that moves, entertains, but also provokes. Their expression is marked by authenticity, a distance from commercial formulas, and an 'all or nothing' attitude.\"",
+                "quote_poprock": "\"Their expression is marked by authenticity, a distance from commercial formulas, and an 'all or nothing' attitude.\"",
                 "source_poprock": "— Poprock",
-                "quote_ravnododna": "“‘Too Much, Too Soon’ album which, to be clear, also boasts strong and skillfully crafted highlights in tracks like ‘Fake Tits,’ ‘Bronco Boy,’ and ‘This Ain’t Fvcking Paris.’ This strongly supports the idea that Jimmy Fitzsimmons is not a hastily thrown-together bunch of amateurs, but rather a group of seasoned musicians who needed a kind of outlet for playing around with ideas and a solid groove — a similar approach to the one Jack White took on his No Name album last year.”",
+                "quote_ravnododna": "Jimmy Fitzsimmons is not a hastily thrown-together bunch of amateurs, but rather a group of seasoned musicians who needed a kind of outlet for playing around with ideas and a solid groove — a similar approach to the one Jack White took on his No Name album last year",
                 "source_ravnododna": "— Ravno do dna",
                 "connect_heading": "CONNECT WITH JIMMY FITZSIMMONS",
                 "download_button": "Download Photos & Logo",
