--- a/index.html
+++ b/index.html
@@ -187,18 +187,21 @@
         <section>
             <h2 class="text-3xl text-center sm:text-left" data-translate-key="watch_listen_heading">WATCH & LISTEN</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-4">
-                <!-- Video 1 -->
-                <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/ZyJkKRuyYfE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                <!-- Video 2 -->
-                <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/qqNYAO9pLBo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                <!-- Video 3 -->
-                <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/7CN509msQdE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
+                <!-- Video 1 Thumbnail -->
+                <a href="https://www.youtube.com/watch?v=ZyJkKRuyYfE" target="_blank" class="video-thumbnail-container">
+                    <img src="https://img.youtube.com/vi/ZyJkKRuyYfE/hqdefault.jpg" alt="Video Thumbnail">
+                    <i class="fas fa-play-circle play-icon"></i>
+                </a>
+                <!-- Video 2 Thumbnail -->
+                <a href="https://www.youtube.com/watch?v=qqNYAO9pLBo" target="_blank" class="video-thumbnail-container">
+                    <img src="https://img.youtube.com/vi/qqNYAO9pLBo/hqdefault.jpg" alt="Video Thumbnail">
+                    <i class="fas fa-play-circle play-icon"></i>
+                </a>
+                <!-- Video 3 Thumbnail -->
+                <a href="https://www.youtube.com/watch?v=7CN509msQdE" target="_blank" class="video-thumbnail-container">
+                    <img src="https://img.youtube.com/vi/7CN509msQdE/hqdefault.jpg" alt="Video Thumbnail">
+                    <i class="fas fa-play-circle play-icon"></i>
+                </a>
             </div>
         </section>
 
