--- a/index.html
+++ b/index.html
@@ -101,21 +101,37 @@
             color: #F5EFE6; /* Soft creamy white */
             margin-top: 0.5rem;
         }
-        /* Responsive video container */
-        .video-container {
+        /* Responsive video container for thumbnails */
+        .video-thumbnail-container {
             position: relative;
             padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
             height: 0;
             overflow: hidden;
             border-radius: 0.5rem;
+            cursor: pointer;
+            transition: transform 0.2s ease-in-out;
         }
-        .video-container iframe {
+        .video-thumbnail-container:hover {
+            transform: scale(1.03);
+        }
+        .video-thumbnail-container img {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
+            object-fit: cover; /* Ensures image covers the area */
             border-radius: 0.5rem; /* Match parent border-radius */
+        }
+        .video-thumbnail-container .play-icon {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 3rem;
+            color: rgba(255, 255, 255, 0.8);
+            text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            pointer-events: none; /* Do not block click on the link */
         }
         /* Language switcher styles */
         .lang-switcher {
