--- a/index.html
+++ b/index.html
@@ -187,7 +187,11 @@
         <section>
             <h2 class="text-3xl text-center sm:text-left" data-translate-key="about_band_heading">ABOUT THE BAND</h2>
             <p class="mt-4 text-lg leading-relaxed text-F5EFE6" data-translate-key="about_band_paragraph">
-                Jimmy Fitzsimmons is a Serbian garage rock band hailing from Novi Sad, formed in 2024. They blend chaos with killer grooves, broken rhythms, saturated guitars, and spring reverbs, creating a sound that boldly mixes funk, hip-hop, and rock. Their music is wild, loud, and unapologetically fun, designed to make you groove, laugh, and maybe even question your life choices.
+                Jimmy Fitzsimmons is a live experience that feels part sermon, part dance riot, part nervous breakdown.
+
+                Coming from Novi Sad, Serbia, Jimmy Fitz blends garage rock with funk, hip-hop, and a good dose of chaos. Their music is wild and rhythmic, but it’s the performance that sets them apart. The frontman takes the crowd to church, while the band plays like they’re armed with their own ADHD.
+
+                Their shows are unpredictable, physical, and deeply entertaining—even for audiences hearing them for the first time. Jimmy Fitz knows how to pull a crowd in and hold it.
             </p>
         </section>
 
@@ -195,7 +199,11 @@
         <section>
             <h2 class="text-3xl text-center sm:text-left" data-translate-key="latest_release_heading">LATEST RELEASE: "TOO MUCH TOO SOON" (2024)</h2>
             <p class="mt-4 text-lg leading-relaxed text-F5EFE6" data-translate-key="latest_release_paragraph">
-                Their debut album, "Too Much Too Soon," is exactly what it sounds like: a glorious mess of raw energy and questionable decision-making. These guys practically trip over their own riffs, the arrangements are delightfully "loose," and yet, somehow, they've stumbled into something incredible. It's fun, it's short, it's stupid (in the best way possible), and it's packed with unforgettable grooves, killer guitar solos, and stories you won't forget. Featuring standout tracks like "Fake Tits," "Bronco Boy," and "This Ain't Fvcking Paris," the album showcases seasoned musicianship beneath its playful exterior. Welcome to the Jimmy Fitz Function!
+                Jimmy Fitzsimmons’ debut album, "Too much, too soon," is a concentrated dose of high-energy garage rock that doesn't take itself too seriously—but knows exactly what it's doing.
+
+                With riffs that stumble forward only to land perfectly in the groove, and arrangements that feel loose in all the right ways, the album offers a danceable and fully alive sound. Beneath the humor and grit lies the control of seasoned players who know when to hold back and when to burn the place down.
+
+                Tracks like Fake Tits, Bronco Boy, Wagon, and This Ain’t Fvcking Paris highlight the band’s ability to move from satire to story to chaos. It’s short, sharp, and built for the stage. 
             </p>
         </section>
 
@@ -293,16 +301,16 @@
         const translations = {
             "en": {
                 "about_band_heading": "ABOUT THE BAND",
-                "about_band_paragraph": "Jimmy Fitzsimmons is a Serbian garage rock band hailing from Novi Sad, formed in 2024. They blend chaos with killer grooves, broken rhythms, saturated guitars, and spring reverbs, creating a sound that boldly mixes funk, hip-hop, and rock. Their music is wild, loud, and unapologetically fun, designed to make you groove, laugh, and maybe even question your life choices.",
+                "about_band_paragraph": "Jimmy Fitzsimmons is a live experience that feels part sermon, part dance riot, part nervous breakdown. Coming from Novi Sad, Serbia, Jimmy Fitz blends garage rock with funk, hip-hop, and a good dose of chaos. Their music is wild and rhythmic, but it’s the performance that sets them apart. The frontman takes the crowd to church, while the band plays like they’re armed with their own ADHD. Their shows are unpredictable, physical, and deeply entertaining—even for audiences hearing them for the first time. Jimmy Fitz knows how to pull a crowd in and hold it.",
                 "latest_release_heading": "LATEST RELEASE: \"TOO MUCH TOO SOON\" (2024)",
-                "latest_release_paragraph": "Their debut album, \"Too Much Too Soon,\" is exactly what it sounds like: a glorious mess of raw energy and questionable decision-making. These guys practically trip over their own riffs, the arrangements are delightfully \"loose,\" and yet, somehow, they've stumbled into something incredible. It's fun, it's short, it's stupid (in the best way possible), and it's packed with unforgettable grooves, killer guitar solos, and stories you won't forget. Featuring standout tracks like \"Fake Tits,\" \"Bronco Boy,\" and \"This Ain't Fvcking Paris,\" the album showcases seasoned musicianship beneath its playful exterior. Welcome to the Jimmy Fitz Function!",
+                "latest_release_paragraph": "Jimmy Fitzsimmons’ debut album, "Too much, too soon," is a concentrated dose of high-energy garage rock that doesn't take itself too seriously—but knows exactly what it's doing. With riffs that stumble forward only to land perfectly in the groove, and arrangements that feel loose in all the right ways, the album offers a danceable and fully alive sound. Beneath the humor and grit lies the control of seasoned players who know when to hold back and when to burn the place down. Tracks like Fake Tits, Bronco Boy, Wagon, and This Ain’t Fvcking Paris highlight the band’s ability to move from satire to story to chaos. It’s short, sharp, and built for the stage. ",
                 "watch_listen_heading": "WATCH & LISTEN",
                 "on_the_press_heading": "ON THE PRESS",
                 "quote_balkanrock": "\"Jimmy Fitzsimmons is an absolute breath of fresh air on the music scene, blending funk, hip-hop, and rock into a sound that is wild, loud, and fun.\"",
                 "source_balkanrock": "— Balkanrock",
                 "quote_poprock": "\"Their expression is marked by authenticity, a distance from commercial formulas, and an 'all or nothing' attitude.\"",
                 "source_poprock": "— Poprock",
-                "quote_ravnododna": "Jimmy Fitzsimmons is not a hastily thrown-together bunch of amateurs, but rather a group of seasoned musicians who needed a kind of outlet for playing around with ideas and a solid groove — a similar approach to the one Jack White took on his No Name album last year",
+                "quote_ravnododna": "\"Jimmy Fitzsimmons is not a hastily thrown-together bunch of amateurs, but rather a group of seasoned musicians who needed a kind of outlet for playing around with ideas and a solid groove — a similar approach to the one Jack White took on his No Name album last year\"",
                 "source_ravnododna": "— Ravno do dna",
                 "connect_heading": "CONNECT WITH JIMMY FITZSIMMONS",
                 "download_button": "Download Photos & Logo",
@@ -317,16 +325,16 @@
             },
             "sr": {
                 "about_band_heading": "O BENDU",
-                "about_band_paragraph": "Osnovan 2024. godine, Jimmy Fitz je prljavi garažni rok u svakom smislu—napola gotov, ubitačan, i napravljen za djuskanje. Ovo nije umetnički projekat. Nema pretencioznosti. Nema beskrajnog doterivanja, što njihov prvenac „Too much, too soon“ i potvrđuje. Dakle, samo sirovina i rifovi koje, kako tvrde, svačija keva može da odsvira ako se malo iscima. Mešajući funk, hip-hop i garaž rok, ovi novosadski momci žele da se mrdaš, smeješ i možda preispitaš neku svoju životnu odluku. Njihov svet je apsurdan, rifovi uprljani, ritmovi razbijeni, emocije polurazrađene - sve što treba za jedno veče dobre svirke.",
+                "about_band_paragraph": "Jimmy Fitzsimmons je koncertno iskustvo koje deluje kao deo propovedi, deo plesne pobune i deo nervnog sloma. Iz Novog Sada dolazi bend koji meša garažni rok sa funkom, hip-hopom i solidnom dozom haosa. Muzika im je divlja i ritmična, ali ono što ih zaista izdvaja je nastup. Frontmen vodi masu u crkvu, dok bend svira kao da su se naoružali svojim ADHD-om. Njihovi nastupi su nepredvidivi, fizički i brutalno zabavni—čak i za publiku koja ih prvi put čuje. Jimmy Fitz zna kako da privuče masu i zadrži je.",
                 "latest_release_heading": "NAJNOVIJE IZDANJE: \"TOO MUCH TOO SOON\" (2024)",
-                "latest_release_paragraph": "Njihov debitantski album, \"Too Much, Too Soon\", je upravo onakav kako i zvuči: veličanstveni haos sirove energije i sumnjivih odluka. Ovi momci se praktično sapliću o sopstvene rifove, aranžmani su... recimo 'labavi', a ipak, nekako su naišli na nešto neverovatno. Zabavno je, kratko, glupo (na najbolji mogući način) i prepuno nezaboravnih gruvova, ubitačnih gitarskih solaža i priča koje nećete zaboraviti. Sa istaknutim numerama kao što su 'Fake Tits', 'Bronco Boy' i 'This Ain't Fvcking Paris', album pokazuje iskusno muziciranje ispod svoje razigrane spoljašnosti.",
+                "latest_release_paragraph": "Debitantski album benda Jimmy Fitzsimmons, Too Much, Too Soon, koncentrovana je doza visokoenergetskog garažnog roka koji sebe ne shvata preozbiljno—ali tačno zna šta radi. Rifovi posrću samo da bi savršeno upali u gruv, a aranžmani deluju razlabavljeno baš tamo gde treba. Rezultat je zvuk koji je plesno zarazan i pun života. Ispod humora i prljavštine krije se kontrola iskusnih muzičara koji znaju kada da stanu—i kada da zapale sve pred sobom. Pesme poput Fake Tits, Bronco Boy, Wagon i This Ain’t Fvcking Paris pokazuju kako bend lako prelazi iz satire u priču, pa u čisti haos. Kratko, oštro i rođeno za binu.",
                 "watch_listen_heading": "GLEDAJTE I SLUŠAJTE",
                 "on_the_press_heading": "U MEDIJIMA",
                 "quote_balkanrock": "\"Bend Jimmy Fitzsimmons je apsolutno osveženje na muzičkoj sceni, mešajući funk, hip hop i rok u zvuk koji je divlji, glasan i zabavan.\"",
                 "source_balkanrock": "— Balkanrock",
                 "quote_poprock": "\"Jimmy Fitzsimmons osnovani su 2024. godine s jasnom misijom – stvoriti glazbu koja pokreće, zabavlja, ali i provocira. Njihov izričaj odlikuje autentičnost, distanca od komercijalne formule i stav “sve ili ništa”.\"",
                 "source_poprock": "— Poprock",
-                "quote_ravnododna": "„Too Much, Too Soon“ album koji, da ne bi bilo zabune, posjeduje i svoja jaka i znalačka uporišta u pjesmama kao što su „Fake Tits“, „Bronco Boy“ i „This Ain’t Fvcking Paris“. To dovoljno ide u prilog tezi da Jimmy Fitzsimmons nije na brzino sklepano društvance diletanata, već spoj iskusnih glazbenika kojima je trebao svojevrsni ventil za igranje s idejama i dobrim grooveom, što je dobrim dijelom sličan pristup za kojim je posegnuo Jack White na svom prošlogodišnjem „No Name“ albumu.",
+                "quote_ravnododna": "\"„Too Much, Too Soon“ album koji, da ne bi bilo zabune, posjeduje i svoja jaka i znalačka uporišta u pjesmama kao što su „Fake Tits“, „Bronco Boy“ i „This Ain’t Fvcking Paris“. To dovoljno ide u prilog tezi da Jimmy Fitzsimmons nije na brzino sklepano društvance diletanata, već spoj iskusnih glazbenika kojima je trebao svojevrsni ventil za igranje s idejama i dobrim grooveom, što je dobrim dijelom sličan pristup za kojim je posegnuo Jack White na svom prošlogodišnjem „No Name“ albumu.\"",
                 "source_ravnododna": "— Ravno do dna",
                 "connect_heading": "POVEŽITE SE SA JIMMY FITZSIMMONS",
                 "download_button": "Preuzmite Fotografije i Logo",
