--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <img src="https://i.imgur.com/16O2W4n.png" alt="Jimmy Fitz Logo" class="logo-img">
         <!-- Band Name and Logo -->
         <div class="text-center">
-            <img src="https://i.imgur.com/CWY92Ht.jpeg"
+            <img src="https://i.imgur.com/cw2DZCv.jpeg"
                  onerror="this.onerror=null;this.src='https://placehold.co/800x500/B22222/F5EFE6?text=BAND%0AFITZSIMMONS';"
                  alt="Jimmy Fitzsimmons Band Logo"
                  class="mx-auto rounded-lg shadow-xl border-2 border-B22222 w-full max-w-md">
@@ -188,9 +188,9 @@
             <h2 class="text-3xl text-center sm:text-left" data-translate-key="about_band_heading">ABOUT THE BAND</h2>
             <p class="mt-4 text-lg leading-relaxed text-F5EFE6" data-translate-key="about_band_paragraph">
                 Jimmy Fitzsimmons is a live experience that feels part sermon, part dance riot, part nervous breakdown.
-
+                </br>
                 Coming from Novi Sad, Serbia, Jimmy Fitz blends garage rock with funk, hip-hop, and a good dose of chaos. Their music is wild and rhythmic, but it’s the performance that sets them apart. The frontman takes the crowd to church, while the band plays like they’re armed with their own ADHD.
-
+                </br>
                 Their shows are unpredictable, physical, and deeply entertaining—even for audiences hearing them for the first time. Jimmy Fitz knows how to pull a crowd in and hold it.
             </p>
         </section>
@@ -200,9 +200,9 @@
             <h2 class="text-3xl text-center sm:text-left" data-translate-key="latest_release_heading">LATEST RELEASE: "TOO MUCH TOO SOON" (2024)</h2>
             <p class="mt-4 text-lg leading-relaxed text-F5EFE6" data-translate-key="latest_release_paragraph">
                 Jimmy Fitzsimmons’ debut album, "Too much, too soon," is a concentrated dose of high-energy garage rock that doesn't take itself too seriously—but knows exactly what it's doing.
-
+                </br>
                 With riffs that stumble forward only to land perfectly in the groove, and arrangements that feel loose in all the right ways, the album offers a danceable and fully alive sound. Beneath the humor and grit lies the control of seasoned players who know when to hold back and when to burn the place down.
-
+                </br>
                 Tracks like Fake Tits, Bronco Boy, Wagon, and This Ain’t Fvcking Paris highlight the band’s ability to move from satire to story to chaos. It’s short, sharp, and built for the stage. 
             </p>
         </section>
@@ -332,9 +332,9 @@
                 "on_the_press_heading": "U MEDIJIMA",
                 "quote_balkanrock": "\"Bend Jimmy Fitzsimmons je apsolutno osveženje na muzičkoj sceni, mešajući funk, hip hop i rok u zvuk koji je divlji, glasan i zabavan.\"",
                 "source_balkanrock": "— Balkanrock",
-                "quote_poprock": "\"Jimmy Fitzsimmons osnovani su 2024. godine s jasnom misijom – stvoriti glazbu koja pokreće, zabavlja, ali i provocira. Njihov izričaj odlikuje autentičnost, distanca od komercijalne formule i stav “sve ili ništa”.\"",
+                "quote_poprock": "\"Njihov izričaj odlikuje autentičnost, distanca od komercijalne formule i stav “sve ili ništa”.\"",
                 "source_poprock": "— Poprock",
-                "quote_ravnododna": "\"„Too Much, Too Soon“ album koji, da ne bi bilo zabune, posjeduje i svoja jaka i znalačka uporišta u pjesmama kao što su „Fake Tits“, „Bronco Boy“ i „This Ain’t Fvcking Paris“. To dovoljno ide u prilog tezi da Jimmy Fitzsimmons nije na brzino sklepano društvance diletanata, već spoj iskusnih glazbenika kojima je trebao svojevrsni ventil za igranje s idejama i dobrim grooveom, što je dobrim dijelom sličan pristup za kojim je posegnuo Jack White na svom prošlogodišnjem „No Name“ albumu.\"",
+                "quote_ravnododna": "\"Jimmy Fitzsimmons nije na brzinu sklepano društvance diletanata, već spoj iskusnih glazbenika kojima je trebao svojevrsni ventil za igranje s idejama i dobrim grooveom, što je dobrim dijelom sličan pristup za kojim je posegnuo Jack White na svom prošlogodišnjem „No Name“ albumu.\"",
                 "source_ravnododna": "— Ravno do dna",
                 "connect_heading": "POVEŽITE SE SA JIMMY FITZSIMMONS",
                 "download_button": "Preuzmite Fotografije i Logo",
