--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             position: relative; /* Needed for ::before positioning */
             z-index: 0; /* Ensure content is above background */
             overflow-x: hidden; /* Prevent horizontal scroll due to potential background effects */
+            text-align: justify;
         }
 
         /* Pseudo-element for subtle grunge/noise overlay */
