--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     <p class="quote-source" data-translate-key="source_poprock">— Poprock</p>
                 </div>
                 <div class="quote-box">
-                    <p data-translate-key="quote_ravnododna">"Jimmy Fitzsimmons is not a hastily thrown-together bunch of amateurs, but rather a group of seasoned musicians who needed a kind of outlet for playing around with ideas and a solid groove — a similar approach to the one Jack White took on his No Name album last year”</p>
+                    <p data-translate-key="quote_ravnododna">"Jimmy Fitzsimmons is not a hastily thrown-together bunch of amateurs, but rather a group of seasoned musicians who needed a kind of outlet for playing around with ideas and a solid groove — a similar approach to the one Jack White took on his No Name album last year.”</p>
                     <p class="quote-source" data-translate-key="source_ravnododna">— Ravno do dna</p>
                 </div>
             </div>
@@ -315,7 +315,7 @@
                 "source_balkanrock": "— Balkanrock",
                 "quote_poprock": "\"Their expression is marked by authenticity, a distance from commercial formulas, and an 'all or nothing' attitude.\"",
                 "source_poprock": "— Poprock",
-                "quote_ravnododna": "\"Jimmy Fitzsimmons is not a hastily thrown-together bunch of amateurs, but rather a group of seasoned musicians who needed a kind of outlet for playing around with ideas and a solid groove — a similar approach to the one Jack White took on his No Name album last year\"",
+                "quote_ravnododna": "\"Jimmy Fitzsimmons is not a hastily thrown-together bunch of amateurs, but rather a group of seasoned musicians who needed a kind of outlet for playing around with ideas and a solid groove — a similar approach to the one Jack White took on his No Name album last year.\"",
                 "source_ravnododna": "— Ravno do dna",
                 "connect_heading": "CONNECT WITH JIMMY FITZSIMMONS",
                 "download_button": "Download Photos & Logo",
