--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             position: relative; /* Needed for ::before positioning */
             z-index: 0; /* Ensure content is above background */
             overflow-x: hidden; /* Prevent horizontal scroll due to potential background effects */
+            text-align: justify;
         }
 
         /* Pseudo-element for subtle grunge/noise overlay */
@@ -188,7 +189,11 @@
             <h2 class="text-3xl text-center sm:text-left" data-translate-key="about_band_heading">ABOUT THE BAND</h2>
             <p class="mt-4 text-lg leading-relaxed text-F5EFE6" data-translate-key="about_band_paragraph">
                 Jimmy Fitzsimmons is a live experience that feels part sermon, part dance riot, part nervous breakdown.
+                </br>
+                </br>
                 Coming from Novi Sad, Serbia, Jimmy Fitz blends garage rock with funk, hip-hop, and a good dose of chaos. Their music is wild and rhythmic, but it’s the performance that sets them apart. The frontman takes the crowd to church, while the band plays like they’re armed with their own ADHD.
+                </br>
+                </br>
                 Their shows are unpredictable, physical, and deeply entertaining—even for audiences hearing them for the first time. Jimmy Fitz knows how to pull a crowd in and hold it.
             </p>
         </section>
@@ -198,7 +203,11 @@
             <h2 class="text-3xl text-center sm:text-left" data-translate-key="latest_release_heading">LATEST RELEASE: "TOO MUCH TOO SOON" (2024)</h2>
             <p class="mt-4 text-lg leading-relaxed text-F5EFE6" data-translate-key="latest_release_paragraph">
                 Jimmy Fitzsimmons’ debut album, "Too much, too soon," is a concentrated dose of high-energy garage rock that doesn't take itself too seriously—but knows exactly what it's doing.
+                </br>
+                </br>
                 With riffs that stumble forward only to land perfectly in the groove, and arrangements that feel loose in all the right ways, the album offers a danceable and fully alive sound. Beneath the humor and grit lies the control of seasoned players who know when to hold back and when to burn the place down.
+                </br>
+                </br>
                 Tracks like Fake Tits, Bronco Boy, Wagon, and This Ain’t Fvcking Paris highlight the band’s ability to move from satire to story to chaos. It’s short, sharp, and built for the stage. 
             </p>
         </section>
