--- a/index.html
+++ b/index.html
@@ -187,14 +187,14 @@
         <!-- About The Band Section -->
         <section>
             <h2 class="text-3xl text-center sm:text-left" data-translate-key="about_band_heading">ABOUT THE BAND</h2>
-            <p class="mt-4 text-lg leading-relaxed text-F5EFE6" data-translate-key="about_band_paragraph">
+            <p class="mt-4 text-lg leading-relaxed text-F5EFE6" data-translate-key="about_band_paragraph_part1">
                 Jimmy Fitzsimmons is a live experience that feels part sermon, part dance riot, part nervous breakdown.
-                <br/>
-                <br/>
-                Coming from Novi Sad, Serbia, Jimmy Fitz blends garage rock with funk, hip-hop, and a good dose of chaos. Their music is wild and rhythmic, but it’s the performance that sets them apart. The frontman takes the crowd to church, while the band plays like they’re armed with their own ADHD.
-                <br/>
-                <br/>
-                Their shows are unpredictable, physical, and deeply entertaining—even for audiences hearing them for the first time. Jimmy Fitz knows how to pull a crowd in and hold it.
+            </p>
+            <p class="mt-4 text-lg leading-relaxed text-F5EFE6" data-translate-key="about_band_paragraph_part2">
+                Coming from Novi Sad, Serbia, Jimmy Fitz blends garage rock with funk, hip-hop, and a good dose of chaos. Their music is wild and rhythmic, but it’s the performance that sets them apart.
+            </p>
+            <p class="mt-4 text-lg leading-relaxed text-F5EFE6" data-translate-key="about_band_paragraph_part3">
+                The frontman takes the crowd to church, while the band plays like they’re armed with their own ADHD. Their shows are unpredictable, physical, and deeply entertaining—even for audiences hearing them for the first time. Jimmy Fitz knows how to pull a crowd in and hold it.
             </p>
         </section>
 
@@ -306,7 +306,9 @@
         const translations = {
             "en": {
                 "about_band_heading": "ABOUT THE BAND",
-                "about_band_paragraph": "Jimmy Fitzsimmons is a live experience that feels part sermon, part dance riot, part nervous breakdown.<br/><br/>Coming from Novi Sad, Serbia, Jimmy Fitz blends garage rock with funk, hip-hop, and a good dose of chaos. Their music is wild and rhythmic, but it’s the performance that sets them apart. The frontman takes the crowd to church, while the band plays like they’re armed with their own ADHD.<br/><br/> Their shows are unpredictable, physical, and deeply entertaining—even for audiences hearing them for the first time. Jimmy Fitz knows how to pull a crowd in and hold it.",
+                "about_band_paragraph_part1": "Jimmy Fitzsimmons is a live experience that feels part sermon, part dance riot, part nervous breakdown.",
+                "about_band_paragraph_part2": "Coming from Novi Sad, Serbia, Jimmy Fitz blends garage rock with funk, hip-hop, and a good dose of chaos. Their music is wild and rhythmic, but it’s the performance that sets them apart. The frontman takes the crowd to church, while the band plays like they’re armed with their own ADHD.",
+                "about_band_paragraph_part3": "Their shows are unpredictable, physical, and deeply entertaining—even for audiences hearing them for the first time. Jimmy Fitz knows how to pull a crowd in and hold it.",
                 "latest_release_heading": "LATEST RELEASE: \"TOO MUCH TOO SOON\" (2024)",
                 "latest_release_paragraph": "Jimmy Fitzsimmons’ debut album, \"Too Much, Too Soon\", is a concentrated dose of high-energy garage rock that doesn't take itself too seriously—but knows exactly what it's doing.<br/><br/> With riffs that stumble forward only to land perfectly in the groove, and arrangements that feel loose in all the right ways, the album offers a danceable and fully alive sound. Beneath the humor and grit lies the control of seasoned players who know when to hold back and when to burn the place down.<br/><br/> Tracks like Fake Tits, Bronco Boy, Wagon, and This Ain’t Fvcking Paris highlight the band’s ability to move from satire to story to chaos. It’s short, sharp, and built for the stage. ",
                 "watch_listen_heading": "WATCH & LISTEN",
@@ -330,7 +332,9 @@
             },
             "sr": {
                 "about_band_heading": "O BENDU",
-                "about_band_paragraph": "Jimmy Fitzsimmons je koncertno iskustvo koje deluje kao deo propovedi, deo plesne pobune i deo nervnog sloma.<br/><br/> Iz Novog Sada dolazi bend koji meša garažni rok sa funkom, hip-hopom i solidnom dozom haosa. Muzika im je divlja i ritmična, ali ono što ih zaista izdvaja je nastup. Frontmen vodi masu u crkvu, dok bend svira kao da su se naoružali svojim ADHD-om.<br/><br/> Njihovi nastupi su nepredvidivi, fizički i brutalno zabavni—čak i za publiku koja ih prvi put čuje. Jimmy Fitz zna kako da privuče masu i zadrži je.",
+                "about_band_paragraph_part1": "Jimmy Fitzsimmons je koncertno iskustvo koje deluje kao deo propovedi, deo plesne pobune i deo nervnog sloma.",
+                "about_band_paragraph_part2": "Iz Novog Sada dolazi bend koji meša garažni rok sa funkom, hip-hopom i solidnom dozom haosa. Muzika im je divlja i ritmična, ali ono što ih zaista izdvaja je nastup. Frontmen vodi masu u crkvu, dok bend svira kao da su se naoružali svojim ADHD-om.",
+                "about_band_paragraph_part3": "Njihovi nastupi su nepredvidivi, fizički i brutalno zabavni—čak i za publiku koja ih prvi put čuje. Jimmy Fitz zna kako da privuče masu i zadrži je.",
                 "latest_release_heading": "NAJNOVIJE IZDANJE: \"TOO MUCH TOO SOON\" (2024)",
                 "latest_release_paragraph": "Debitantski album benda Jimmy Fitzsimmons, \"Too Much, Too Soon\", koncentrisana je doza visokoenergetskog garažnog roka koji sebe ne shvata preozbiljno—ali tačno zna šta radi.<br/><br/> Rifovi posrću samo da bi savršeno upali u gruv, a aranžmani deluju razlabavljeno baš tamo gde treba. Rezultat je zvuk koji je plesno zarazan i pun života. Ispod humora i prljavštine krije se kontrola iskusnih muzičara koji znaju kada da stanu—i kada da zapale sve pred sobom.<br/><br/> Pesme poput Fake Tits, Bronco Boy, Wagon i This Ain’t Fvcking Paris pokazuju kako bend lako prelazi iz satire u priču, pa u čisti haos. Kratko, oštro i rođeno za binu.",
                 "watch_listen_heading": "GLEDAJTE I SLUŠAJTE",
