--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
                 Jimmy Fitzsimmons is a live experience that feels part sermon, part dance riot, part nervous breakdown.
             </p>
             <p class="mt-4 text-lg leading-relaxed text-F5EFE6" data-translate-key="about_band_paragraph_part2">
-                Coming from Novi Sad, Serbia, Jimmy Fitz blends garage rock with funk, hip-hop, and a good dose of chaos. Their music is wild and rhythmic, but it’s the performance that sets them apart.
+                Coming from Novi Sad, Serbia, Jimmy Fitz blends garage rock with funk, hip-hop, and a good dose of chaos. Their music is wild and rhythmic, but it’s the performance that sets them apart. The frontman takes the crowd to church, while the band plays like they’re armed with their own ADHD.
             </p>
             <p class="mt-4 text-lg leading-relaxed text-F5EFE6" data-translate-key="about_band_paragraph_part3">
-                The frontman takes the crowd to church, while the band plays like they’re armed with their own ADHD. Their shows are unpredictable, physical, and deeply entertaining—even for audiences hearing them for the first time. Jimmy Fitz knows how to pull a crowd in and hold it.
+                Their shows are unpredictable, physical, and deeply entertaining—even for audiences hearing them for the first time. Jimmy Fitz knows how to pull a crowd in and hold it.
             </p>
         </section>
 
