--- a/index.html
+++ b/index.html
@@ -181,6 +181,9 @@
                 <a href="https://drive.google.com/drive/folders/1y2gfTTyEmbwQNnZFWhverIR3_YJE_lI9?fbclid=IwY2xjawK6xNVleHRuA2FlbQIxMABicmlkETBrMEtvdUkxRlZjRmpxd1dKAR7DiJDHMpEuRqAjMGJO-DDuLGXruw05XWI3oVsa2jq81_om2F5zTJqlq3e4TA_aem_W85MRpp2rsne0CisWFYvMA" download="jimmy-fitzsimmons-logo.png" class="btn-primary" data-translate-key="download_button">
                     Download Photos & Logo
                 </a>
+                <a href="tech-rider.html" class="btn-primary" data-translate-key="tech_rider_button">
+                    Tech Rider
+                </a>
             </div>
         </div>
 
