--- a/tech-rider.html
+++ b/tech-rider.html
@@ -388,7 +388,7 @@
             <section class="bg-gray-50 p-6 rounded-lg shadow-sm">
                 <h2 class="text-2xl font-semibold text-gray-800 mb-4 border-b pb-2">4. Stage Plot</h2>
                 <div class="flex justify-center mb-4">
-                    <img src="diagramma-palco-1024x768.webp-007f8b8f-1e88-4e38-adcc-879494bdf2a8" alt="Stage Plot Diagram" class="max-w-full h-auto rounded-lg shadow-md">
+                    <img src="https://i.imgur.com/mI1OB5h.jpeg" alt="Stage Plot Diagram" class="max-w-full h-auto rounded-lg shadow-md">
                 </div>
                 <p class="text-center text-gray-600 text-sm italic">
                     *Please provide your custom stage plot image here. The diagram should clearly indicate the position of each musician, instruments, amplifiers, monitor wedges (numbered), microphone placements, DI box locations, and power drops.
