--- a/tech-rider.html
+++ b/tech-rider.html
@@ -14,13 +14,14 @@
             font-family: 'Inter', sans-serif;
             @apply bg-gray-100 text-gray-800 p-4 sm:p-6 md:p-8;
         }
-        /* Styling for table headers */
-        th {
-            @apply px-4 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider;
+        /* Styling for table headers and cells */
+        th, td {
+            @apply px-3 py-2 text-sm text-gray-900; /* Adjusted padding for better fit */
+            vertical-align: top; /* Align content to the top for symmetry */
         }
-        /* Styling for table cells */
-        td {
-            @apply px-4 py-3 whitespace-nowrap text-sm text-gray-900;
+        th {
+            @apply text-xs font-semibold text-gray-600 uppercase tracking-wider;
+            font-size: 0.65rem; /* Slightly smaller font size for headers */
         }
         /* Zebra stripping for table rows */
         tbody tr:nth-child(odd) {
@@ -35,7 +36,7 @@
     <div class="max-w-4xl mx-auto bg-white shadow-xl rounded-lg overflow-hidden">
         <!-- Header Section -->
         <header class="bg-gradient-to-r from-blue-600 to-indigo-700 p-6 sm:p-8 text-white rounded-t-lg">
-            <h1 class="text-3xl sm:text-4xl font-bold mb-2">
+            <h1 class="text-3xl sm:text-4xl font-bold mb-2 text-center">
                 JIMMY FITZSIMMONS – TECHNICAL RIDER
             </h1>
         </header>
@@ -51,58 +52,58 @@
                     <table class="min-w-full divide-y divide-gray-200">
                         <thead class="bg-gray-100">
                             <tr>
-                                <th scope="col" class="px-4 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                <th scope="col" class="text-left">
                                     Name
                                 </th>
-                                <th scope="col" class="px-4 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                <th scope="col" class="text-left">
                                     Plays
                                 </th>
-                                <th scope="col" class="px-4 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                <th scope="col" class="text-left">
                                     Amp
                                 </th>
-                                <th scope="col" class="px-4 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                <th scope="col" class="text-center">
                                     DI
                                 </th>
-                                <th scope="col" class="px-4 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                <th scope="col" class="text-left">
                                     Mics
                                 </th>
                             </tr>
                         </thead>
                         <tbody class="divide-y divide-gray-200">
                             <tr>
-                                <td>Marko</td>
-                                <td>Main Vocals / Synth</td>
-                                <td>No</td>
-                                <td>1</td>
-                                <td>1 Vox<br>1 Synth DI</td>
+                                <td class="text-left">Marko</td>
+                                <td class="text-left">Main Vocals / Synth</td>
+                                <td class="text-left">No</td>
+                                <td class="text-center">1</td>
+                                <td class="text-left">1 Vox<br>1 Synth DI</td>
                             </tr>
                             <tr>
-                                <td>Krle</td>
-                                <td>Lead Guitar / Backing Vocals</td>
-                                <td>Guitar</td>
-                                <td>No</td>
-                                <td>1 GTR Mic<br>1 Vox</td>
+                                <td class="text-left">Krle</td>
+                                <td class="text-left">Lead Guitar / Backing Vocals</td>
+                                <td class="text-left">Guitar</td>
+                                <td class="text-center">No</td>
+                                <td class="text-left">1 GTR Mic<br>1 Vox</td>
                             </tr>
                             <tr>
-                                <td>Banjac</td>
-                                <td>Guitar / Backing Vocals</td>
-                                <td>Guitar</td>
-                                <td>No</td>
-                                <td>1 GTR Mic<br>1 Vox</td>
+                                <td class="text-left">Banjac</td>
+                                <td class="text-left">Guitar / Backing Vocals</td>
+                                <td class="text-left">Guitar</td>
+                                <td class="text-center">No</td>
+                                <td class="text-left">1 GTR Mic<br>1 Vox</td>
                             </tr>
                             <tr>
-                                <td>Petar</td>
-                                <td>Bass</td>
-                                <td>Bass or DI</td>
-                                <td>1</td>
-                                <td>1 Bass DI</td>
+                                <td class="text-left">Petar</td>
+                                <td class="text-left">Bass</td>
+                                <td class="text-left">Bass or DI</td>
+                                <td class="text-center">1</td>
+                                <td class="text-left">1 Bass DI</td>
                             </tr>
                             <tr>
-                                <td>Tomica</td>
-                                <td>Drums / Backing Vocals</td>
-                                <td>No</td>
-                                <td>No</td>
-                                <td>Drum Mic Set<br>1 Vox</td>
+                                <td class="text-left">Tomica</td>
+                                <td class="text-left">Drums / Backing Vocals</td>
+                                <td class="text-left">No</td>
+                                <td class="text-center">No</td>
+                                <td class="text-left">Drum Mic Set<br>1 Vox</td>
                             </tr>
                         </tbody>
                     </table>
@@ -230,154 +231,116 @@
                     <table class="min-w-full divide-y divide-gray-200">
                         <thead class="bg-gray-100">
                             <tr>
-                                <th scope="col" class="px-4 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                <th scope="col" class="text-center">
                                     Channel
                                 </th>
-                                <th scope="col" class="px-4 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                <th scope="col" class="text-left">
                                     Instrument/Source
                                 </th>
-                                <th scope="col" class="px-4 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                <th scope="col" class="text-left">
                                     Mic/DI Type (Preferred)
                                 </th>
-                                <th scope="col" class="px-4 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
+                                <th scope="col" class="text-left">
                                     Stand Type
-                                </th>
-                                <th scope="col" class="px-4 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
-                                    Phantom Power (+48V)
-                                </th>
-                                <th scope="col" class="px-4 py-3 text-left text-xs font-semibold text-gray-600 uppercase tracking-wider">
-                                    Notes/Monitor Send
                                 </th>
                             </tr>
                         </thead>
                         <tbody class="divide-y divide-gray-200">
                             <tr>
-                                <td>1</td>
-                                <td>Kick In</td>
-                                <td>D112</td>
-                                <td>Short Boom</td>
-                                <td>No</td>
-                                <td>Yes</td>
+                                <td class="text-center">1</td>
+                                <td class="text-left">Kick In</td>
+                                <td class="text-left">D112</td>
+                                <td class="text-left">Short Boom</td>
                             </tr>
                             <tr>
-                                <td>2</td>
-                                <td>Snare Top</td>
-                                <td>SM57</td>
-                                <td>Snare Clip</td>
-                                <td>No</td>
-                                <td></td>
+                                <td class="text-center">2</td>
+                                <td class="text-left">Snare Top</td>
+                                <td class="text-left">SM57</td>
+                                <td class="text-left">Snare Clip</td>
                             </tr>
                             <tr>
-                                <td>3</td>
-                                <td>Snare Bottom</td>
-                                <td>SM57</td>
-                                <td>Short Boom</td>
-                                <td>No</td>
-                                <td></td>
+                                <td class="text-center">3</td>
+                                <td class="text-left">Snare Bottom</td>
+                                <td class="text-left">SM57</td>
+                                <td class="text-left">Short Boom</td>
                             </tr>
                             <tr>
-                                <td>4</td>
-                                <td>Rack Tom</td>
-                                <td>Dynamic mic</td>
-                                <td>Drum Clip</td>
-                                <td>No</td>
-                                <td></td>
+                                <td class="text-center">4</td>
+                                <td class="text-left">Rack Tom</td>
+                                <td class="text-left">Dynamic mic</td>
+                                <td class="text-left">Drum Clip</td>
                             </tr>
                             <tr>
-                                <td>5</td>
-                                <td>Floor Tom</td>
-                                <td>Dynamic mic</td>
-                                <td>Drum Clip</td>
-                                <td>No</td>
-                                <td></td>
+                                <td class="text-center">5</td>
+                                <td class="text-left">Floor Tom</td>
+                                <td class="text-left">Dynamic mic</td>
+                                <td class="text-left">Drum Clip</td>
                             </tr>
                             <tr>
-                                <td>6</td>
-                                <td>Hi Hat</td>
-                                <td>Condenser mic</td>
-                                <td>Straight</td>
-                                <td>Yes</td>
-                                <td></td>
+                                <td class="text-center">6</td>
+                                <td class="text-left">Hi Hat</td>
+                                <td class="text-left">Condenser mic</td>
+                                <td class="text-left">Straight</td>
                             </tr>
                             <tr>
-                                <td>7</td>
-                                <td>OH R</td>
-                                <td>Condenser mic</td>
-                                <td>Tall Boom</td>
-                                <td>Yes</td>
-                                <td></td>
+                                <td class="text-center">7</td>
+                                <td class="text-left">OH R</td>
+                                <td class="text-left">Condenser mic</td>
+                                <td class="text-left">Tall Boom</td>
                             </tr>
                             <tr>
-                                <td>8</td>
-                                <td>OH L</td>
-                                <td>Condenser mic</td>
-                                <td>Tall Boom</td>
-                                <td>Yes</td>
-                                <td></td>
+                                <td class="text-center">8</td>
+                                <td class="text-left">OH L</td>
+                                <td class="text-left">Condenser mic</td>
+                                <td class="text-left">Tall Boom</td>
                             </tr>
                             <tr>
-                                <td>9</td>
-                                <td>Bass</td>
-                                <td>DI</td>
-                                <td>N/A</td>
-                                <td>Yes</td>
-                                <td>Yes</td>
+                                <td class="text-center">9</td>
+                                <td class="text-left">Bass</td>
+                                <td class="text-left">DI</td>
+                                <td class="text-left">N/A</td>
                             </tr>
                             <tr>
-                                <td>10</td>
-                                <td>GTR Krle</td>
-                                <td>SM57</td>
-                                <td>Short Boom</td>
-                                <td>No</td>
-                                <td>Yes</td>
+                                <td class="text-center">10</td>
+                                <td class="text-left">GTR Krle</td>
+                                <td class="text-left">SM57</td>
+                                <td class="text-left">Short Boom</td>
                             </tr>
                             <tr>
-                                <td>11</td>
-                                <td>GTR Banjac</td>
-                                <td>SM57</td>
-                                <td>Short Boom</td>
-                                <td>No</td>
-                                <td>Yes</td>
+                                <td class="text-center">11</td>
+                                <td class="text-left">GTR Banjac</td>
+                                <td class="text-left">SM57</td>
+                                <td class="text-left">Short Boom</td>
                             </tr>
                             <tr>
-                                <td>12</td>
-                                <td>Marko Vox</td>
-                                <td>SM57</td>
-                                <td>Tall Boom</td>
-                                <td>No</td>
-                                <td>Yes</td>
+                                <td class="text-center">12</td>
+                                <td class="text-left">Krle Vox</td>
+                                <td class="text-left">SM57</td>
+                                <td class="text-left">Tall Boom</td>
                             </tr>
                             <tr>
-                                <td>13</td>
-                                <td>Tomica drums Vox</td>
-                                <td>SM58</td>
-                                <td>Tall Boom</td>
-                                <td>No</td>
-                                <td>Yes</td>
+                                <td class="text-center">13</td>
+                                <td class="text-left">Tomica drums Vox</td>
+                                <td class="text-left">SM58</td>
+                                <td class="text-left">Tall Boom</td>
                             </tr>
                             <tr>
-                                <td>14</td>
-                                <td>Banjac Vox</td>
-                                <td>SM57</td>
-                                <td>Tall Boom</td>
-                                <td>No</td>
-                                <td>Yes</td>
+                                <td class="text-center">14</td>
+                                <td class="text-left">Banjac Vox</td>
+                                <td class="text-left">SM57</td>
+                                <td class="text-left">Tall Boom</td>
                             </tr>
                             <tr>
-                                <td>15</td>
-                                <td>Petar Main Vox</td>
-                                <td>SM57</td>
-                                <td>Tall Boom</td>
-                                <td>No</td>
-                                <td>Yes</td>
+                                <td class="text-center">15</td>
+                                <td class="text-left">Marko Main Vox</td>
+                                <td class="text-left">SM57</td>
+                                <td class="text-left">Tall Boom</td>
                             </tr>
                             <tr>
-                                <td>16</td>
-                                <td>Synth</td>
-                                <td>DI</td>
-                                <td>N/A</td>
-                                <td>Yes</td>
-                                <td>Yes</td>
+                                <td class="text-center">16</td>
+                                <td class="text-left">Synth</td>
+                                <td class="text-left">DI</td>
+                                <td class="text-left">N/A</td>
                             </tr>
                         </tbody>
                     </table>
@@ -390,9 +353,7 @@
                 <div class="flex justify-center mb-4">
                     <img src="https://i.imgur.com/mI1OB5h.jpeg" alt="Stage Plot Diagram" class="max-w-full h-auto rounded-lg shadow-md">
                 </div>
-                <p class="text-center text-gray-600 text-sm italic">
-                    *Please provide your custom stage plot image here. The diagram should clearly indicate the position of each musician, instruments, amplifiers, monitor wedges (numbered), microphone placements, DI box locations, and power drops.
-                </p>
+
             </section>
         </main>
 
