--- a/tech-rider.html
+++ b/tech-rider.html
@@ -161,7 +161,7 @@
                                 <h4 class="text-lg font-bold text-green-700 mb-3 border-b pb-2 border-green-300">Venue Provided:</h4>
                                 <ul class="list-disc list-inside ml-4 space-y-2 text-gray-700">
                                     <li><strong>Bass Amplification (1x, for Petar):</strong> Either a suitable bass amplifier and cabinet or a high-quality DI Box for direct bass signal.</li>
-                                    <li><strong>Guitar Stands (2x)</strong></li>
+                                    <li><strong>Guitar Stands (4x)</strong></li>
                                 </ul>
                             </div>
                         </div>
@@ -216,9 +216,6 @@
                         </div>
                     </div>
                 </div>
-                <p class="mt-6 text-gray-700 text-sm italic">
-                    All gear including backline has to be approved by the band's sound engineer prior to the gig.
-                </p>
             </section>
 
             <!-- Input List Section (New Step 3) -->
@@ -280,7 +277,7 @@
                                 <td class="text-center">6</td>
                                 <td class="text-left">Hi Hat</td>
                                 <td class="text-left">Condenser mic</td>
-                                <td class="text-left">Straight</td>
+                                <td class="text-left">Tall Boom</td>
                             </tr>
                             <tr>
                                 <td class="text-center">7</td>
@@ -353,6 +350,15 @@
                 <div class="flex justify-center mb-4">
                     <img src="https://i.imgur.com/mI1OB5h.jpeg" alt="Stage Plot Diagram" class="max-w-full h-auto rounded-lg shadow-md">
                 </div>
+
+            </section>
+
+              <!-- Special Needs / Requests -->
+             <section class="bg-gray-50 p-6 rounded-lg shadow-sm">
+                <h2 class="text-2xl font-semibold text-gray-800 mb-4 border-b pb-2">5. Special Needs / Requests</h2>
+                <p class="mb-4 text-gray-700">
+                    We strongly encourage a soundcheck.
+                </p>
 
             </section>
         </main>
